changes in ranger access control for table function